--- a/sass/main.css
+++ b/sass/main.css
@@ -1252,7 +1252,6 @@
 
 html {
   font-size: 62.5%;
-  overflow-x: hidden;
 }
 
 @media only screen and (max-width: 75em) {
@@ -1281,6 +1280,10 @@ body {
   line-height: 1.6;
   position: relative;
   width: 100%;
+}
+
+.site-wrapper {
+  overflow-x: hidden;
 }
 
 .container {
